--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&display=swap" rel="stylesheet">
     <title>Main</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="buttons">
+            <button><a href="/">Download</a></button>
+            <button><a href="readme.html">Readme</a></button>
+        </div>
+    </nav>
+    <div class="text">
+        <h1>What the heck is this app? That's desktop.chatgpt!</h1>
+        <h3>Maybe it's simple, but useful!</h3>
+        <img src="download-removebg-preview-Photoroom-removebg-preview.png" alt="desktop.chatgpt logo">
+        <h3>desktop.chatgpt forever!</h3>
+    </div>
 </body>
 </html>
