--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="buttons">
-            <button><a href="/">Download</a></button>
+            <button><a href="desktop.chatgpt.zip">Download</a></button>
             <button><a href="readme.html">Readme</a></button>
         </div>
     </nav>
